adicionando exemplos de todas as opções do documentos

--- a/exemplos/tex/1_Introducao.tex
+++ b/exemplos/tex/1_Introducao.tex
@@ -170,7 +170,7 @@ referente ao plágio nas instituições de ensino\footnote{\url{https://www.cape
 	\item IEEE Plagiarism FAQ
 		\\\url{http://www.ieee.org/publications_standards/publications/rights/plagiarism_FAQ.html}
 	\item Relatório da Comissão de Integridade de Pesquisa do CNPq
-		\\\url{http://www.cnpq.br/web/guest/documentos-do-cic}
+		\\\url{http://memoria.cnpq.br/documents/10157/a8927840-2b8f-43b9-8962-5a2ccfa74dda}
 \end{itemize}
 
 \section{Normas EnE}
