--- a/exemplos/tex/3_TCC.tex
+++ b/exemplos/tex/3_TCC.tex
@@ -1,27 +1,51 @@
-Este capítulo oferece sugestões para produção de um documento descrevendo um Trabalho de Conclusão de curso...
+Este capítulo oferece sugestões para produção de um documento descrevendo um Trabalho de Conclusão 
+de curso.
 
 \section{UnB}%
-A \acrlong{UnB} oferece diversas informações em seu sítio\footnote{\url{http://www.unb.br/oportunidades/projeto_final_de_curso}}. O texto existente em 21/11/2014 é
-reproduzido a seguir:
+A \acrlong{UnB} oferece diversas informações em seu 
+sítio\footnote{\url{http://www.unb.br/oportunidades/projeto_final_de_curso}}. O texto existente em 
+21/11/2014 é reproduzido a seguir:
 
 \fontshape{it}\selectfont%
-Os cursos de graduação, especialização e pós-graduação têm como objetivo formar o aluno e prepará-lo para o exercício profissional. Como avaliação do aprendizado, a universidade exige um projeto que mobiliza os estudantes a colaborar com a pesquisa acadêmica. Desde a escolha do tema até a apresentação do trabalho final, o tempo do aluno é ocupado quase integralmente. Para facilitar a vida desses estudantes, o Portal UnB preparou uma série de dicas de professores especialistas no assunto.
+Os cursos de graduação, especialização e pós-graduação têm como objetivo formar o aluno e 
+prepará-lo para o exercício profissional. Como avaliação do aprendizado, a universidade exige um 
+projeto que mobiliza os estudantes a colaborar com a pesquisa acadêmica. Desde a escolha do tema 
+até a apresentação do trabalho final, o tempo do aluno é ocupado quase integralmente. Para 
+facilitar a vida desses estudantes, o Portal UnB preparou uma série de dicas de professores 
+especialistas no assunto.
 
 \subsection{Os tipos}
-A monografia, a dissertação e a tese são, respectivamente, os trabalhos de conclusão de curso de graduação ou especialização, mestrado e doutorado. A grande diferença é a profundidade exigida no projeto, aumentada de acordo com a importância do título de cada nível acadêmico. Mas, em todos os casos, a pesquisa deve abordar o tema selecionado com coerência, consistência e referencial teórico adequado.
+A monografia, a dissertação e a tese são, respectivamente, os trabalhos de conclusão de curso de 
+graduação ou especialização, mestrado e doutorado. A grande diferença é a profundidade exigida no 
+projeto, aumentada de acordo com a importância do título de cada nível acadêmico. Mas, em todos os 
+casos, a pesquisa deve abordar o tema selecionado com coerência, consistência e referencial teórico 
+adequado.
 
-Alguns cursos de graduação não exigem monografia, mas um relatório de estágios realizados, como acontece nas licenciaturas. A metodologia de pesquisar e apresentar resultados se mantém, como é exigido em todo projeto final.
+Alguns cursos de graduação não exigem monografia, mas um relatório de estágios realizados, como 
+acontece nas licenciaturas. A metodologia de pesquisar e apresentar resultados se mantém, como é 
+exigido em todo projeto final.
 
-Uma monografia é, genericamente, um relatório de pesquisa sobre o assunto estudado. É específico a um tema pré-definido dentro de uma área de conhecimento e aborda questões e análises de um problema, a construção de uma teoria ou o desenvolvimento de um produto.
+Uma monografia é, genericamente, um relatório de pesquisa sobre o assunto estudado. É específico a 
+um tema pré-definido dentro de uma área de conhecimento e aborda questões e análises de um 
+problema, a construção de uma teoria ou o desenvolvimento de um produto.
 
-Exigida no mestrado, a dissertação cobra do futuro mestre um conhecimento mais profundo. A pesquisa deve ser o resultado em relatório que representa o trabalho experimental ou exposição científica com um tema bem delimitado, e demonstrar o conhecimento de literatura existente sobre o assunto.
+Exigida no mestrado, a dissertação cobra do futuro mestre um conhecimento mais profundo. A pesquisa 
+deve ser o resultado em relatório que representa o trabalho experimental ou exposição científica 
+com um tema bem delimitado, e demonstrar o conhecimento de literatura existente sobre o assunto.
 
-A mais densa entre todos os projetos finais, a tese de doutorado exige mais no que diz respeito a teoria e metodologia do tema pesquisado. Deve apresentar contribuições reais para o desenvolvimento específico da especialidade em questão. A base do estudo demanda uma investigação original.
+A mais densa entre todos os projetos finais, a tese de doutorado exige mais no que diz respeito a 
+teoria e metodologia do tema pesquisado. Deve apresentar contribuições reais para o desenvolvimento 
+específico da especialidade em questão. A base do estudo demanda uma investigação original.
 
 \subsection{Teoria e prática}
-Todo projeto de conclusão de curso exige um relatório escrito baseado em teorias, mesmo que o assunto estudado seja algo prático como uma campanha publicitária ou um projeto arquitetônico. Porém, o inverso não se aplica.
+Todo projeto de conclusão de curso exige um relatório escrito baseado em teorias, mesmo que o 
+assunto estudado seja algo prático como uma campanha publicitária ou um projeto arquitetônico. 
+Porém, o inverso não se aplica.
 
-As divisões dos tipos de trabalho variam entre cada área de conhecimento. Em suma, o projeto pode ser teórico, prático ou uma união dos dois. Na primeira situação, o aluno pode fazer estudo de caso - pesquisar sobre um fato histórico ou evento importante - ou formular uma teoria - por meio de pesquisa ou reavaliação das semelhantes.
+As divisões dos tipos de trabalho variam entre cada área de conhecimento. Em suma, o projeto pode 
+ser teórico, prático ou uma união dos dois. Na primeira situação, o aluno pode fazer estudo de caso 
+- pesquisar sobre um fato histórico ou evento importante - ou formular uma teoria - por meio de 
+pesquisa ou reavaliação das semelhantes.
 
 O projeto prático se dedica a criação e construção de um produto, que pode variar de um novo motor a uma composição musical. O curso de graduação costuma oferecer a opção de um trabalho prático aos alunos. No caso dos cursos de mestrado e doutorado, nem todos os departamentos da universidade dispõem de linhas de pesquisa que permitam um projeto que vá além da teoria acadêmica.
 
