--- a/exemplos/tex/resumo.tex
+++ b/exemplos/tex/resumo.tex
@@ -9,7 +9,7 @@ futuros. É seguido de (geralmente) três palavras-chave que devem indicar clara
 refere o seu trabalho. Por exemplo: \emph{Este trabalho apresenta informações úteis a produção de trabalhos
 científicos para descrever e exemplificar como utililzar a classe \LaTeX\ do
 Departamento de Ciência da Computação da Universidade de Brasília para gerar
-documentos. A classe \unbcic\ define um padrão de formato para textos do CIC, facilitando a
+documentos. A classe \unbene\ define um padrão de formato para textos do EnE/FT-UnB, facilitando a
 geração de textos e permitindo que os autores foquem apenas no conteúdo. O formato
 foi aprovado pelos professores do Departamento e utilizado para gerar este documento.
 Melhorias futuras incluem manutenção contínua da classe e aprimoramento do texto
