--- a/monografia.tex
+++ b/monografia.tex
@@ -13,13 +13,14 @@
 % Informações Requeridas
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \orientador{\prof \dr Adi Shamir}{Weizmann Institute}%
-\coorientador{\prof \dr Ivan Damg\aard}{Aarhus University}
-\coordenador[a]{\prof[a] \dr[a] Alexandra Boldyreva}{Georgia Tech}%
+\coorientador{\prof \dr Ivan Damg{\aa}rd}{Aarhus University}%
+\coordenador[a]{\prof[a] \dr[a] Shafi Goldwasser}{Weizmann Institute}%
 \membrobanca{\prof \dr Yehuda Lindell}{Bar Ilan University}%
-\membrobanca{\dr Silvio Micali}{Massachusetts Institute of Technology}%
+\membrobanca{\prof \dr Silvio Micali}{Massachusetts Institute of Technology}%
 
 \autor{Stefano M. P. C.}{Souza}%
 \titulo{UnB-EnE: Uma classe em LaTeX para textos do Departamento de Engenharia Elétrica}%
+\diamesano{16}{março}{2019}
 
 \palavraschave{LaTeX, metodologia científica, trabalho de conclusão de curso}%
 \keywords{LaTeX, scientific method, thesis}%
@@ -35,5 +36,5 @@
 	\capitulo{4_Apresentacao}{Apresentações}%
 	
 	\apendice{Apendice_Fichamento}{Fichamento de Artigo Científico}%
-	\anexo{Anexo1}{Documentação Original \unbcic\ (parcial)}%
+	\anexo{Anexo1}{Documentação Original \unbene\ (parcial)}%
 \end{document}%
